assets/_scss/base.scss
body {
  background-color: #1a202c;
  padding: 50px;
  font: 14px/1.5 -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
    Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', Arial,
    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
  color: #ccc;
  font-weight: 400;
}

h1, .h1,
h2, .h2,
h3, .h3,
h4, .h4,
h5, .h5,
h6, .h6 {
  font-family: 'Georgia', 'Palatino', 'Kai', 'Big Caslon', Baskerville;
  color: #eee;
  margin: 0 0 20px;
  font-weight: 500;
  letter-spacing: 0.3px;
  display: block;
  a {
    color: inherit;
  }
  svg.icon {
    font-size: .6em;
    vertical-align: middle;
  }
}

p,
ul,
ol,
table,
pre,
dl {
  margin: 0 0 20px;
}

h1, .h1,
h2, .h2,
h3, .h3 {
  line-height: 1.1;
}

h1, .h1 {
  font-size: 30px;
}

a {
  color: #39c;
  text-decoration: none;
}

a:hover {
  color: #069;
}

a small {
  font-size: 11px;
  color: #777;
  margin-top: -0.3em;
  display: block;
}

a:hover small {
  color: #777;
}

.wrapper {
  width: 860px;
  margin: 0 auto;
}

blockquote {
  border-left: 1px solid #e5e5e5;
  margin: 0;
  padding: 0 0 0 20px;
  font-style: italic;
}

code,
pre {
  font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal,
    Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
  color: #ddd;
  font-size: 12px;
}

code {
  background: #252C3B;
  padding: 3px 6px;
  border-radius: 3px;
  border: 1px solid #0E121A;
}

pre {
  padding: 8px 15px;
  background: #f8f8f8;
  border-radius: 5px;
  border: 1px solid #e5e5e5;
  overflow-x: auto;
  
  code {
    background: unset;
    padding: unset;
    border-radius: unset;
    border: unset
  }
}

table {
  width: 100%;
  border-collapse: collapse;
}

th,
td {
  text-align: left;
  padding: 5px 10px;
  border-bottom: 1px solid #e5e5e5;
}

dt {
  color: #444;
  font-weight: 500;
}

th {
  color: #444;
}

img {
  max-width: 100%;
}

header {
  width: 210px !important;
  float: left;
  position: fixed;
  -webkit-font-smoothing: subpixel-antialiased;
}

header ul {
  list-style: none;
  height: 40px;
  padding: 0;
  background: #252C3B;
  border-radius: 5px;
  border: 1px solid #141923;
  width: 270px;
}

header li {
  width: 89px;
  float: left;
  border-right: 1px solid #161C27;
  height: 40px;
}

header li:first-child a {
  border-radius: 5px 0 0 5px;
}

header li:last-child a {
  border-radius: 0 5px 5px 0;
}

header ul a {
  line-height: 1;
  font-size: 11px;
  color: #999;
  display: block;
  text-align: center;
  padding-top: 6px;
  height: 34px;
}

header ul a:hover {
  color: #999;
}

header ul a:active {
  // background-color: #f0f0f0;
}

strong {
  color: #fff;
  font-weight: 500;
}

header ul li + li + li {
  border-right: none;
  width: 89px;
}

header ul a strong {
  font-size: 14px;
  display: block;
  color: #fff;
}

section {
  width: 500px;
  float: right;
  padding-bottom: 50px;
}

small {
  font-size: 11px;
}

hr {
  border: 0;
  background: #0E121A;
  height: 1px;
  margin: 0 0 20px;
}

footer {
  width: 270px;
  float: left;
  position: fixed;
  bottom: 50px;
  -webkit-font-smoothing: subpixel-antialiased;
}

@media print, screen and (max-width: 959px) {
  div.wrapper {
    width: auto;
    margin: 0;
  }

  header,
  section,
  footer {
    float: none;
    position: static;
    width: auto;
  }

  header {
    padding-right: 320px;
  }

  section {
    border: 1px solid #e5e5e5;
    border-width: 1px 0;
    padding: 20px 0;
    margin: 0 0 20px;
  }

  header a small {
    display: inline;
  }

  header ul {
    position: absolute;
    right: 50px;
    top: 52px;
  }
}

@media print, screen and (max-width: 719px) {
  body {
    word-wrap: break-word;
  }

  header {
    padding: 0;
  }

  header ul,
  header p.view {
    position: static;
  }

  pre,
  code {
    word-wrap: normal;
  }
}

@media print, screen and (max-width: 479px) {
  body {
    padding: 15px;
  }

  header ul {
    width: 99%;
  }

  header li,
  header ul li + li + li {
    width: 33%;
  }
}

@media print {
  body {
    padding: 0.4in;
    font-size: 12pt;
    color: #444;
  }
}

